[fix] image de fond avec z-index: -1

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ img.bg {
   min-height: 100%;
   min-width: 1024px;
 
+  z-index: -1;
+
   /* Set up proportionate scaling */
   width: 100%;
   height: cover;
